Finish Contact me section, added footer and clean the css code.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <title></title>
   </head>
@@ -92,26 +93,67 @@
         </div>
       </section>
       <section id="contact">
-          <div class="container">
-            <h1 class="text-center text-uppercase txt-color-1 title-section">Contact Me</h1>
-            <div class="divider-control "><div class="outer-line bg-color-1"></div><span class="glyphicon glyphicon-star txt-color-1" aria-hidden="true"></span><div class="outer-line bg-color-1"></div></div>
-            <div class="row">
+        <div class="container">
+          <h1 class="text-center text-uppercase txt-color-1 title-section">Contact Me</h1>
+          <div class="divider-control "><div class="outer-line bg-color-1"></div><span class="glyphicon glyphicon-star txt-color-1" aria-hidden="true"></span><div class="outer-line bg-color-1"></div></div>
+          <div class="row justify-content-md-center">
+            <div class="col-lg-8 col-lg-offset-2">
               <form>
-                <div class="form-control">
+                <div class="form-freelancer lh-50">
                   <input type="text" placeholder="Name">
                 </div>
-                <div class="form-control">
-                  <input type="text" placeholder="Name">
+                <div class="form-freelancer lh-50">
+                  <input type="text" placeholder="Email Address">
                 </div>
-                <div class="form-control">
-                  <input type="text" placeholder="Name">
+                <div class="form-freelancer lh-50">
+                  <input type="text" placeholder="Phone Number">
                 </div>
-                <div class="form-control">
+                <div class="form-freelancer lh-150">
                   <textarea rows="5" placeholder="Message"></textarea>
+                </div>
+                <div class="form-freelancer-alt lh-50">
+                  <input type="submit" value="Send" class="btn btn-lg bg-color-2">
                 </div>
               </form>
             </div>
           </div>
-        </section>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="top-footer bg-color-1">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-4 col-md-6">
+              <div class="footer-item">
+                <h2 class="text-uppercase">Location</h2>
+                <p>2215 John Daniel Drive</p>
+                <p>Clark, MO 65243 </p>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="footer-item">
+                <h2 class="text-uppercase">Around the web</h2>
+                <a class="btn btn-outline-light btn-social"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-outline-light btn-social"><i class="fab fa-twitter"></i></a>
+                <a class="btn btn-outline-light btn-social"><i class="fab fa-linkedin-in"></i></a>
+                <a class="btn btn-outline-light btn-social"><i class="fas fa-basketball-ball"></i></a>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="footer-item">
+                <h2 class="text-uppercase">Location</h2>
+                <p>Freelance is a free to use, MIT licensed Bootstrap theme created by Start Bootstrap . </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="bottom-footer bg-color-3">
+        <div class="container">
+          <small>Copyright &copy; Your Website 2020</small>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
