--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
             </div>
           </div>
         </div>
-      </section>
-    </main>
+      </section></main>
     <footer>
       <div class="top-footer bg-color-1">
         <div class="container">
